Switch over from Jersey to Resteasy. Also, get rid of source-info.
